--- a/src/Jili/ApiBundle/Resources/views/Admin/infoAdver.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/infoAdver.html.twig
@@ -7,7 +7,9 @@
 <script src="{{ asset('js/jquery-1.7.js')}}" type="text/javascript"></script>
 </HEAD>
 <BODY>
+<form action="{{ path('_admin_infoAdver')}}" method="post" id="form1"}} >
 <table align="center" width="1024">
+    <tr><td colspan="6" align="center">标题搜索:<input type="text" name="title" value="{{ title }}" /><input type="submit" name="search" value="搜 索"/></td></tr>
     	<tr>
         	<th>广告标题</th>
             <th>广告截至时间</th>
@@ -37,7 +39,7 @@
         </tr>
          {% endfor %}
          {%  endif %}
-    </table>
+    </table></form>
     {{ knp_pagination_render(pagination) }}
 
 </BODY></HTML>
