--- a/src/Jili/ApiBundle/Resources/views/Default/index.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Default/index.html.twig
@@ -54,7 +54,7 @@ $(document).ready(function(){
             </div>
             <ul>
             	<li><a href="{{ asset(path('_user_adtaste',{'type':0}),'cdn1') }}" >我的任务历史</a></li>
-                <li><a href="{{ asset(path('_user_exchange',{'type':0}),'cdn1') }}" >我的兑换历史</a></li>
+                <li><a href="{{ asset(path('_user_exchange',{'type':0,'exchangeType':1}),'cdn1') }}" >我的兑换历史</a></li>
             </ul>
         </div> 
         {% else %}
