--- a/src/Jili/ApiBundle/Resources/views/User/exchange.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/exchange.html.twig
@@ -10,93 +10,207 @@
 <link href="{{ asset('css/default.css')}}" rel="stylesheet" type="text/css" />
 <link href="{{ asset('css/personalAside.css')}}" rel="stylesheet" type="text/css" />
 <link href="{{ asset('css/history.css')}}" rel="stylesheet" type="text/css" />
+<link href="{{ asset('css/amazonBlg.css')}}" rel="stylesheet" type="text/css" />
 <link href="{{ asset('css/pageNav.css')}}" rel="stylesheet" type="text/css" />
 <script src="{{ asset('js/jquery-1.7.js')}}" type="text/javascript"></script>
+<script src="{{ asset('js/jquery.zclip.min.js')}}" type="text/javascript"></script>
 <script type="text/javascript">
 $(document).ready(function() {
-	var url = window.location.href;
+	  var url = window.location.href;
     url = url.split("exchange/");
-    url = url[1].substring(0,1);
-    $("div article .screen a").removeClass("hover"); 
-    if(url){
-    	switch(url){
-        case "0":
-            $("div article .screen a:last").addClass("hover"); 
-            break;
-        case "1":
-            $("div article .screen a:first").addClass("hover"); 
-            break;
-        case "2":
-            $("div article .screen a:eq(1)").addClass("hover");
-            break; 
-        case "3":
-            $("div article .screen a:eq(2)").addClass("hover"); 
-            break;
-        default:
-        	location.href="{{ path('_user_adtaste',{'type': 0}) }}";
-            break;
-        }
+    url = url[1].split("/");
+    var exchangeType = {{ exchangeType }};
+    if(exchangeType == 1){
+          $(".exscreen a:last").removeClass("hover"); 
+          $(".exscreen a:first").addClass("hover"); 
+          $("div article .screen a").removeClass("hover"); 
+          switch(url[0]){
+            case "0":
+                $("div article .screen a:first").addClass("hover"); 
+                break;
+            case "1":
+                $("div article .screen a:eq(1)").addClass("hover"); 
+                break;
+            case "2":
+                $("div article .screen a:eq(2)").addClass("hover");
+                break; 
+            case "3":
+                $("div article .screen a:eq(3)").addClass("hover"); 
+                break;
+            case "4":
+                $("div article .screen a:last").addClass("hover"); 
+                break;
+            default:
+                location.href="{{ path('_user_exchange',{'type': 0,'exchangeType':1 }) }}";
+                break;
+            }
+    }else{
+       $(".exscreen a:first").removeClass("hover"); 
+       $(".exscreen a:last").addClass("hover");
     }
+    
+    $(".close").click(function (){
+        $(".web_click_bg").hide();  
+        $(".am_blackBg").hide();
+    })
+
+    
 });
 function addClass(type){
-	switch(type){
+    switch(type){
         case 0:
-        	location.href="{{ path('_user_exchange',{'type': 0}) }}";
-        	break;
+          location.href="{{ path('_user_exchange',{'type': 0,'exchangeType':1 }) }}";
+          break;
         case 1:
-        	location.href="{{ path('_user_exchange',{'type': 1}) }}";
-        	break;
+          location.href="{{ path('_user_exchange',{'type': 1,'exchangeType':1 }) }}";
+          break;
         case 2:
-        	location.href="{{ path('_user_exchange',{'type': 2}) }}";
-        	break;
+          location.href="{{ path('_user_exchange',{'type': 2,'exchangeType':1 }) }}";
+          break;
         case 3:
-        	location.href="{{ path('_user_exchange',{'type': 3}) }}";
-        	break;
+          location.href="{{ path('_user_exchange',{'type': 3,'exchangeType':1 }) }}";
+          break;
+        case 4:
+          location.href="{{ path('_user_exchange',{'type': 4,'exchangeType':1 }) }}";
+          break;
         default:
-        	location.href="{{ path('_user_exchange',{'type': 0}) }}";
+          location.href="{{ path('_user_exchange',{'type': 0,'exchangeType':1 }) }}";
             break;
-	}
+    }
+	
+}
+function addExClass(type){
+  switch(type){
+        case 1:
+          location.href="{{ path('_user_exchange',{'type': 0,'exchangeType':1 }) }}";
+          break;
+        case 2:
+          location.href="{{ path('_user_exchange',{'type': 0,'exchangeType':2 }) }}"; 
+          break;
+        default:
+          location.href="{{ path('_user_exchange',{'type': 0,'exchangeType':1 }) }}";
+            break;
+    }
+}
+function copy(){
+    var text = $("#amz").html();
+    urlCp = text.split("<a");
+    $('.copy').zclip({ 
+        path: "{{ asset('js/ZeroClipboard.swf')}}",
+        copy: urlCp[0],
+        afterCopy: function(){//复制成功 
+           alert('复制成功'); 
+        } 
+    })
+}
+function look(eid){
+        $.ajax({
+            url: "{{ path('_user_exchangeLook') }}?exid="+eid,
+            type: "GET",
+            success:function(data){
+              var html='';
+              var obj = eval(data);
+              for(var i=0;i<obj.length;i++){ 
+                 if(obj[i]['a']){   
+                  html += "<p id='amz' class='amz_"+i+"'>"+obj[i]['a']+"<a class='copy' href='javascript:void(0);'>复制</a></p>";      
+                 }
+              }
+              $(".web_click_bg .cardNumberArea").html(html); 
+              $(".am_blackBg").show();
+              $(".web_click_bg").show();
+              copy();
+
+            }
+          });
 }
 </script>
 </head>
 <body>
 {% include 'JiliApiBundle::header.html.twig' %}
+<div class="am_blackBg"></div>
+<div class="web_click_bg" style="display:none;">
+  <h3>您的亚马逊礼品卡编号为：<a class="close"></a></h3>
+  <div class="cardNumberArea">
+  </div>
+</div>
+
 <div class="webArticle history">
   <h2><span><img src="{{ asset('images/exchangeHistory.gif')}}" alt="兑换历史"></span></h2>
   <aside>
   {% include 'JiliApiBundle:User:rightInfo.html.twig' %}
   </aside>
   <article>
-  	<div class="screen">
-  	<a href="javascript:void(0);" class="hover" onclick="addClass(1);return false;">近30天</a>
-  	<a href="javascript:void(0);" onclick="addClass(2);return false;">过去6个月内</a>
-  	<a href="javascript:void(0);" onclick="addClass(3);return false;">过去1年内</a>
-  	<a href="javascript:void(0);" onclick="addClass(0);return false;">全部</a>
-  	</div>
-    <table>
-    	<tr>
-        	<th>兑换申请时间</th>
-            <th>兑换方式</th>
-            <th>米粒数</th>
-            <th>兑换完成时间</th>
-            <th>状态</th>
-        </tr>
-      {% if exchange %}
-         {% for item in pagination %}
-          <tr>
-            <td>{{ item.exchangeDate.date | date('Y-m-d') }}</td>
-            <td>{{ item.type }}</td>
-            <td>{{ item.targetPoint }}</td>
-            <td>{% if item.status %} {{ item.finishDate.date | date('Y-m-d') }} {% else %} {% endif %}</td>
-            <td>{% if item.status %} {% if item.status==1 %} 兑换成功 {% elseif item.status==2 %} 兑换失败 {% else %} {% endif%}  {% else %} 处理中 {% endif %}</td>
+  <div class="exscreen">
+    <a href="javascript:void(0);" class="hoverCb hover" onclick="addExClass(1);return false;">兑出</a>
+    <a href="javascript:void(0);" class="hoverMs" onclick="addExClass(2);return false;">兑入</a>
+    </div>
+    {% if exchangeType == 1 %}
+    <div class="screen" style="position: absolute;">
+    <a href="javascript:void(0);" class="hover" onclick="addClass(0);return false;">全部</a>
+    <a href="javascript:void(0);" onclick="addClass(1);return false;">91问问积分</a>
+    <a href="javascript:void(0);" onclick="addClass(2);return false;">亚马逊礼品卡</a>
+    <a href="javascript:void(0);" onclick="addClass(3);return false;">支付宝充值</a>
+    <a href="javascript:void(0);" onclick="addClass(4);return false;">手机费充值</a>
+    </div>
+      <table>
+      	<tr>
+          	<th>兑换申请时间</th>
+              <th>兑换方式</th>
+              <th>米粒数</th>
+              <th>兑换物品</th>
+              <th>兑换完成时间</th>
+              <th>状态</th>
           </tr>
-          {% endfor %}
-      {% else %}
+        {% if exchange %}
+           {% for item in pagination %}
+            <tr>
+              <td>{{ item.exchangeDate.date | date('Y-m-d') }}</td>
+              <td>{{ item.type }}</td>
+              <td>{{ item.targetPoint }}</td>
+              {% if item.exType == 1 %}
+                   <td>{{ item.targetPoint }}问问积分</td>
+              {% elseif item.exType == 2 %}
+                   <td>{{ item.exchangeItemNumber }}张亚马逊礼品卡
+                    {% if item.status == 1 %}
+                   <a href="javascript:void(0);" class="lookMore" onclick="look({{ item.id }});">查看</a>
+                   {% else %}
+                   {% endif %}</td>
+              {% elseif item.exType == 3 %}
+                   <td>{{ item.exchangeItemNumber }}元支付宝</td>
+              {% elseif item.exType == 4 %}
+                   <td>{{ item.exchangeItemNumber }}元手机话费</td>
+             {% else %}
+              {% endif %}
+              <td>{% if item.status %} {{ item.finishDate.date | date('Y-m-d') }} {% else %} {% endif %}</td>
+              <td>{% if item.status %} {% if item.status==1 %} 兑换成功 {% elseif item.status==2 %} 兑换失败 {% else %} {% endif %}  {% else %} 处理中 {% endif %}</td>
+            </tr>
+            {% endfor %}
+        {% else %}
+          <tr><td align="center" colspan="5">没有兑换记录</td></tr>
+        {% endif %} </table>
+        {{ knp_pagination_render(pagination) }}
+      {% elseif exchangeType == 2 %}
+          <table width="100%" border="0" cellspacing="0" cellpadding="0">
+        <tr>
+          <th>兑换来自</th>
+          <th>米粒数</th>
+          <th>兑换完成时间</th>
+        </tr>
+        {% if exFrWen %}
+        {% for item in pagination %}
+        <tr>
+          <td>91问问</td>
+          <td>{{ item.paymentPoint }}</td>
+          <td>{{ item.createTime.date | date('Y-m-d') }}</td>
+        </tr>
+        {% endfor %}
+        {% else %}
         <tr><td align="center" colspan="5">没有兑换记录</td></tr>
+        {% endif %}
+      </table>
+      {{ knp_pagination_render(pagination) }}
+      {% else %}
       {% endif %}
-       
-    </table>
-    {{ knp_pagination_render(pagination) }}
    
   </article>
 </div>
