--- a/src/Jili/ApiBundle/Resources/views/User/info.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/info.html.twig
@@ -9,8 +9,10 @@
 <!-- [endif] -->
 <link href="{{ asset('css/default.css')}}" rel="stylesheet" type="text/css" />
 <link href="{{ asset('css/personal.css')}}" rel="stylesheet" type="text/css" />
+<link href="{{ asset('css/amazonBlg.css')}}" rel="stylesheet" type="text/css" />
 <link rel="stylesheet" href="{{ asset('css/jquery.Jcrop.css')}}" type="text/css" />
 <script src="{{ asset('js/jquery-1.7.js')}}" type="text/javascript"></script>
+<script src="{{ asset('js/jquery.zclip.min.js')}}" type="text/javascript"></script>
 <script src="{{ asset('js/personal.js')}}" type="text/javascript"></script>
 <script src="{{ asset('js/jquery.ui.widget.js')}}" type="text/javascript"></script>
 <script src="{{ asset('js/jquery.iframe-transport.js')}}" type="text/javascript"></script>
@@ -19,6 +21,11 @@
 <script type="text/javascript">
 var path = '{{ asset("") }}';
 $(document).ready(function(){ 
+  $(".amClose").click(function (){
+        $(".web_click_bg").hide();  
+        $(".am_blackBg").hide();
+    })
+  $("#moreExchange").attr('href',"{{ path('_user_exchange',{'type': 0,'exchangeType':1 }) }}"); 
     function showPreview(coords){
       var rx = 100 / coords.w;
       var ry = 100 / coords.h;
@@ -210,11 +217,66 @@ function selectCity(){
       $("#cityInfo").html(html);
   }
 }
+function copy(){
+    var text = $("#amz").html();
+    urlCp = text.split("<a");
+    $('.copy').zclip({ 
+        path: "{{ asset('js/ZeroClipboard.swf')}}",
+        copy: urlCp[0],
+        afterCopy: function(){//复制成功 
+           alert('复制成功'); 
+        } 
+    })
+}
+function look(eid){
+        $.ajax({
+            url: "{{ path('_user_exchangeLook') }}?exid="+eid,
+            type: "GET",
+            success:function(data){
+              var html='';
+              var obj = eval(data);
+              for(var i=0;i<obj.length;i++){ 
+                if(obj[i]['a'])  
+                  html += "<p id='amz' class='amz_"+i+"'>"+obj[i]['a']+"<a class='copy' href='javascript:void(0);'>复制</a></p>";                 
+              }
+              $(".web_click_bg .cardNumberArea").html(html); 
+              $(".am_blackBg").show();
+              $(".web_click_bg").show();
+              copy();
+            }
+          });
+}
+function addClass(id){
+  switch(id){
+        case 1:
+             $(".screen a:last").removeClass("hover"); 
+             $(".screen a:first").addClass("hover"); 
+             $("#exfromjili").show();
+             $("#exfromwen").hide();
+             $("#moreExchange").attr('href',"{{ path('_user_exchange',{'type': 0,'exchangeType':1 }) }}"); 
+            break;
+        case 2:
+             $(".screen a:first").removeClass("hover"); 
+             $(".screen a:last").addClass("hover"); 
+             $("#exfromjili").hide();
+             $("#exfromwen").show();
+             $("#moreExchange").attr('href',"{{ path('_user_exchange',{'type': 0,'exchangeType':2 }) }}"); 
+            break;
+       default:
+            break;
+        }
+}
 </script>
 </head>
 
 <body>
 {% include 'JiliApiBundle::header.html.twig' %}
+<div class="am_blackBg"></div>
+<div class="web_click_bg" style="display:none;">
+  <h3>您的亚马逊礼品卡编号为：<a class="amClose"></a></h3>
+  <div class="cardNumberArea">
+  </div>
+</div>
 <div class="personal">
   <section class="line">
     <div class="photo">
@@ -254,7 +316,7 @@ function selectCity(){
   </section>
   
 <section id= "info">
-    <h3>个人信息<a class="close">关闭</a><a class="open" style="display:none;">打开</a></h3>
+    <h3>个人信息<a class="close">关闭</a><a class="open">打开</a></h3>
     <div class="content info">
       <a class="edit" href="javascript:void(0);" id="change">修改 »</a>
       <ul>
@@ -463,11 +525,17 @@ function selectCity(){
   <section>
     <h3>我的兑换历史<a class="close">关闭</a><a class="open" style="display:none;">打开</a></h3>
     <div class="content score">
-      <table width="100%" border="0" cellspacing="0" cellpadding="0">
+    <div class="screen">
+      <a onclick="addClass(1);" class="hoverCb hover" href="javascript:void(0);">兑出</a>
+      <a onclick="addClass(2);" class="hoverMs" href="javascript:void(0);">兑入</a>
+    </div>
+      <a id="moreExchange" class="more edit">更多 »</a>
+      <table width="100%" border="0" cellspacing="0" cellpadding="0" id="exfromjili">
         <tr>
           <th>兑换申请时间</th>
           <th>兑换方式</th>
           <th>米粒数</th>
+          <th>兑换物品</th>
           <th>兑换完成时间</th>
           <th>状态</th>
         </tr>
@@ -476,12 +544,46 @@ function selectCity(){
         <tr>
           <td>{{ item.exchangeDate.date | date('Y-m-d') }}</td>
           <td>{{ item.type }}</td>
-           <td>{{ item.targetPoint }}</td>
+          <td>{{ item.targetPoint }}</td>
+          {% if item.exType == 1 %}
+                 <td>{{ item.targetPoint }}问问积分</td>
+            {% elseif item.exType == 2 %}
+                 <td>{{ item.exchangeItemNumber }}张亚马逊礼品卡
+                 {% if item.status == 1 %}
+                 <a href="javascript:void(0);" class="lookMore" onclick="look({{ item.id }});">查看</a>
+                 {% else %}
+                 {% endif %}</td>
+            {% elseif item.exType == 3 %}
+                 <td>{{ item.exchangeItemNumber }}元支付宝</td>
+            {% elseif item.exType == 4 %}
+                 <td>{{ item.exchangeItemNumber }}元手机话费</td>
+            {% else %}
+            {% endif %}
           <td>{% if item.status %} {{ item.finishDate.date | date('Y-m-d')  }} {% else %} {% endif %}</td>
           <td>{% if item.status %}{% if item.status==1 %}兑换成功 {% elseif item.status==2 %}兑换失败 {% else %} {% endif %} {% else %} 处理中 {% endif %}</td>
         </tr>
         {% endfor %}
-          <a href="{{  asset(path('_user_exchange',{'type': 1}),'cdn1') }}" class="more edit">更多 »</a>
+
+        {% else %}
+        <tr><td align="center" colspan="5">没有兑换记录</td></tr>
+        {% endif %}
+         
+      </table>
+      <table width="100%" border="0" cellspacing="0" cellpadding="0" id="exfromwen" style="display:none">
+        <tr>
+          <th>兑换来自</th>
+          <th>米粒数</th>
+          <th>兑换完成时间</th>
+        </tr>
+        {% if exFrWen %}
+        {% for item in exFrWen %}
+        <tr>
+          <td>91问问</td>
+          <td>{{ item.paymentPoint }}</td>
+          <td>{{ item.createTime.date | date('Y-m-d') }}</td>
+        </tr>
+        {% endfor %}
+          <!-- <a href="{{  asset(path('_user_exchange',{'type': 0,'exchangeType':2 }),'cdn1') }}" class="more edit">更多 »</a> -->
         {% else %}
         <tr><td align="center" colspan="5">没有兑换记录</td></tr>
         {% endif %}
@@ -489,12 +591,7 @@ function selectCity(){
     
     </div>
   </section>
-  <!--  <section>
-    <h3>账户扩展<a class="close">关闭</a><a class="open" style="display:none;">打开</a></h3>
-    <div class="content expand">
-      内容
-    </div>
-  </section>-->
+
 </div>
 {% include 'JiliApiBundle::footer.html.twig' %}
 </body>
