--- a/src/Jili/ApiBundle/Resources/views/Exchange/amazonInfo.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Exchange/amazonInfo.html.twig
@@ -56,7 +56,7 @@ function changePoint(){
     <div class="wenwen">
       <div class="form">
         <dd>选择兑换张数：</dd>
-        <dt><img width="138" height="113" src="/jili/web/images/amazon_card.gif"> *
+        <dt><img width="138" height="113" src="{{ asset('images/amazon_card.gif')}}"> *
           <select id="point" name="point"  onchange="changePoint();">
             <option>1</option>
             <option>2</option>
