--- a/src/Jili/ApiBundle/Resources/views/Exchange/index.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Exchange/index.html.twig
@@ -25,7 +25,7 @@ $(document).ready(function(){
 	<a class="exchangeBtn wenwen" href="{{ path('_exchange_info') }}">立即兑换</a>
 	<!--<a class="await mobiel">即将开放</a>-->
 	<a class="exchangeBtn amazonBtn" href="{{ path('_exchange_identityCardComfirm',{'type': 'amazon'}) }}">立即兑换</a>
-	<a class="await alipayBtn">即将开放</a>
+	<a class="exchangeBtn alipayBtn" href="{{ path('_exchange_identityCardComfirm',{'type': 'alipay'}) }}">立即兑换</a>
 	<a class="exchangeBtn mobileBtn" href="{{ path('_exchange_identityCardComfirm',{'type': 'mobile'}) }}">立即兑换</a>
 
 	<img src="{{ asset('images/exchangeContent.jpg')}}" width="813" height="270"><img src="{{ asset('images/exchangeFuture.jpg')}}"></div>
