--- a/src/Jili/ApiBundle/Resources/views/User/rightInfo.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/rightInfo.html.twig
@@ -8,3 +8,10 @@
       <p class="point">当前米粒数<br />
         <span>{{ user.points }}</span></p>
  </section>
+ <section class="menu">
+ 	<ul>
+ 		<li><a href="{{ asset(path('_user_adtaste',{'type':0}),'cdn1') }}" >我的任务历史</a><li>
+ 		<li><a href="{{ asset(path('_user_exchange',{'type':0,'exchangeType':1}),'cdn1') }}">我的兑换历史</a><li>
+ 		<li><a class="myMes">我的消息中心</a><li>
+ 	</ul>
+ </section>
