对应  issue #234 样式修改

--- a/web/css/personalAside.css
+++ b/web/css/personalAside.css
@@ -42,7 +42,9 @@ aside section.menu ul li a{
     text-align: left;
     text-decoration: none;
     width: 168px;
+    font-size: 14px;
+    color: #666;
 }
 aside section.menu ul li a:hover{
-	background-color: #DDD;
+	background-color: #EEE;
 }
