--- a/src/Jili/ApiBundle/Resources/views/Admin/exchangeAmazonCsv.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/exchangeAmazonCsv.html.twig
@@ -1,5 +1,5 @@
-id,email,exchange_date,exchange_points,exchange_goods,exchange_type,exchange_status,add_point_date,amazonCard1,amazonCard2,amazonCard3,amazonCard4,amazonCard5,ident_suspicion,ip_suspicion,mobile_suspicion
+id,email,exchange_date,exchange_points,exchange_number,exchange_type,exchange_status,add_point_date,amazonCard1,amazonCard2,amazonCard3,amazonCard4,amazonCard5,ident_suspicion,ip_suspicion,mobile_suspicion
 {% if exchange %}
-{% for item in exchange %}{{ item.id }},{{ item.email }},{{ item.exchangeDate.date | date('Y-m-d') }},{{ item.targetPoint }},{{ item.exchangeItemNumber }}张亚马逊礼品卡,{{ item.type }},{% if item.status == 1%}ok{% elseif item.status == 2%}ng{% else %}{% endif %},{% if item.finishDate %}{{ item.finishDate.date | date('Y-m-d') }}{% endif %},,,,,,{{ item.ident }},{{ item.ip }},{{ item.mobile }},
+{% for item in exchange %}{{ item.id }},{{ item.email }},{{ item.exchangeDate.date | date('Y-m-d') }},{{ item.targetPoint }},{{ item.exchangeItemNumber }},amazon,{% if item.status == 1%}ok{% elseif item.status == 2%}ng{% else %}{% endif %},{% if item.finishDate %}{{ item.finishDate.date | date('Y-m-d') }}{% endif %},,,,,,{{ item.ident }},{{ item.ip }},{{ item.mobile }},
 {% endfor %}
 {% endif %}
