--- a/src/Jili/ApiBundle/Resources/views/Exchange/finish.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Exchange/finish.html.twig
@@ -2,7 +2,13 @@
 <html>
 <head>
 <meta charset="UTF-8" />
-<title>积粒网-兑换91问问积分</title>
+<title>积粒网-{% if type == 'jili' %}兑换91问问积分
+{% elseif type =='amazon' %}兑换亚马逊礼品卡
+{% elseif type=='alipay' %}兑换支付宝
+{% elseif type=='mobile' %}兑换手机充值
+{% else %}
+{% endif %}
+ </title>
 {% include 'JiliApiBundle::seo.html.twig' %}
 <!-- [if lt IE9] -->
 <script src="{{ asset('js/html5.js')}}" type="text/javascript"></script>
