--- a/src/Jili/ApiBundle/Resources/views/Default/help.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Default/help.html.twig
@@ -9,17 +9,76 @@
 <!-- [endif] -->
 <link href="{{ asset('css/default.css')}}" rel="stylesheet" type="text/css" />
 <link href="{{ asset('css/aside.css')}}" rel="stylesheet" type="text/css" />
-<link href="{{ asset('css/comingSoon.css')}}" rel="stylesheet" type="text/css" />
+<link href="{{ asset('css/help.css')}}" rel="stylesheet" type="text/css" />
 <script src="{{ asset('js/jquery-1.7.js')}}" type="text/javascript"></script>
-<script src="{{ asset('js/banner.js')}}" type="text/javascript"></script>
+<script src="{{ asset('js/help.js')}}" type="text/javascript"></script>
+
+<script type="text/javascript">
+function sendContent(){
+    $.ajax({  
+        url: "{{ path('_default_contact') }}?content="+$("#fbc").val()+"&email="+$("#email").val(),
+        type: "POST",
+        success:function(data){
+           if(data==1){
+               alert('请输入您的问题');
+           }else if(data==2){
+               alert('请输入您的联系方式');
+           }else if(data==3){
+               alert('您的联系方式不正确');
+           }else if(data==4){
+               alert('系统出错，邮件发送失败');
+           }else{
+               alert('提交成功');
+               $("#fbc").val("");
+               $("#email").val("");
+               $(".qaFrame").hide();
+           }
+        }
+      });
+}
+</script>
+
 </head>
 <body>
 {% include 'JiliApiBundle::header.html.twig' %}
-<div class="webArticle comingSoon">
-  <article>
-  	如果您有任何疑问，请发邮件至<a href="mailto:91jili@hotmail.com">cs@91jili.com</a>
-  </article>
+<div class="webArticle help">
+<div class="topBtn"><a href="#"><img
+	src="{{ asset('other/topBtn.jpg') }}"></a></div>
+<article>
+<h2><img src="{{ asset('images/helpTitle.jpg') }}"><a
+	href="#" class="qaBtn hover">问题反馈</a></h2>
+<ul class="tabs-nav">
+	<li class="hover"><a href="#">购物返利</a></li>
+	<li><a href="#">商家活动</a></li>
+	<li><a href="#">体验广告</a></li>
+	<li><a href="#">游戏体验</a></li>
+	<li><a href="#">兑换中心</a></li>
+	<div class="clear"></div>
+</ul>
+<div class="qaFrame">
+<h4>提交问题</h4>
+<div class="qaMain">
+<p><textarea class="question"
+	onblur="if(!this.value){this.value=this.defaultValue;this.style.color='#999'}"
+	onfocus="if(this.value==this.defaultValue)this.value='';if(this.value!=this.defaultValue)this.style.color='#444444';"
+	class="grayTips" id="fbc" name="content">如果您有问题，请在这里提交！
+            
+我们会主动联系您并帮您解决问题。</textarea></p>
+<p><span style="color: #666666; margin: 0; font-size: 14px">联系方式：</span><input
+	type="text" class="mail"
+	onblur="if(!value){value=defaultValue;this.style.color='#999'}"
+	onfocus="if(value==defaultValue){value='';this.style.color='#444444'}"
+	class="grayTips" value="E-mail" id="email" name="contact"><input
+	type="button" class="submitQuestion" value="提 交" title="提 交"
+	onclick="sendContent()" /></p>
 </div>
+<div class="finish" style="display: none;">
+<p>非常感谢，我们已经收到了您的问题！<br />
+之后我们会与您取得联系，并帮助您解决问题。</p>
+</div>
+</div>
+<div id="helpMain"></div>
+</article></div>
 {% include 'JiliApiBundle::footer.html.twig' %}
 </body>
 </html>
