--- a/src/Jili/ApiBundle/Resources/views/footer.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/footer.html.twig
@@ -1,7 +1,14 @@
 <footer>
-	<section><p><a href="{{ path('_default_about') }}" target="_blank">关于积粒网</a>|<a href="{{ path('_user_agreement') }}" target="_blank">服务条款</a>|<a href="{{ path('_default_service') }}">广告服务</a>|<a href="{{ asset(path('_default_help'),'cdn1')  }}">帮助中心</a><span><a href="http://www.miibeian.gov.cn/" target="_blank">ICP证号：沪ICP备10212377号-2</a></span></p>
-    <p><span class="footAbout">关注我们：</span><a class="sina" target="_blank" href="http://www.weibo.com/91jili">新浪微博</a><a class="tencent" target="_blank" href="http://t.qq.com/china91jili">腾讯微博</a><!--<a class="weixin" href="#">微信</a>--></p>
-	</section>
+<section>
+<p><a href="{{ path('_default_about') }}" target="_blank">关于积粒网</a>|<a
+	href="{{ path('_user_agreement') }}" target="_blank">服务条款</a>|<a
+	href="{{ path('_default_service') }}">广告服务</a>|<a
+	href="{{ asset(path('_default_support'),'cdn1')  }}">帮助中心</a><span><a
+	href="http://www.miibeian.gov.cn/" target="_blank">ICP证号：沪ICP备10212377号-2</a></span></p>
+<p><span class="footAbout">关注我们：</span><a class="sina"
+	target="_blank" href="http://www.weibo.com/91jili">新浪微博</a><a
+	class="tencent" target="_blank" href="http://t.qq.com/china91jili">腾讯微博</a><!--<a class="weixin" href="#">微信</a>--></p>
+</section>
 </footer>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
