--- a/web/css/help.css
+++ b/web/css/help.css
@@ -53,6 +53,9 @@
 .help article .tabs-nav li {
 	float: left;
 	width: 20%;
+	width: 19.9%\9;
+	width: 20%\0;
+	_width: 19.9%;
 }
 .help article .tabs-nav li a {
 	font-size: 16px;
@@ -72,6 +75,7 @@
 	border: 1px solid #EEEEEE;
 	border-top: none;
 	padding: 10px 40px;
+	clear: both;
 }
 .help #helpMain ul {
 	display: none;
