--- a/src/Jili/ApiBundle/Resources/views/Admin/menu.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/menu.html.twig
@@ -442,6 +442,50 @@
        <TABLE cellSpacing=0 cellPadding=0 width=150 border=0>
         <TR height=22>
           <TD style="PADDING-LEFT: 30px" background="{{ asset('images/admin/menu_bt.jpg')}}"><A 
+            class=menuParent onclick=expand(14) 
+            href="javascript:void(0);">签到管理</A></TD></TR>
+        <TR height=4>
+          <TD></TD></TR></TABLE>
+      <TABLE id=child14 style="DISPLAY: none" cellSpacing=0 cellPadding=0 
+      width=150 border=0>
+      
+           <TR height=20>
+          <TD align=middle width=30><IMG height=9 
+            src="{{ asset('images/admin/menu_icon.gif')}}" width=9></TD>
+          <TD><A class=menuChild 
+            href="{{ path('_admin_addCheckinShop') }}" 
+            target=main>添加商店</A></TD></TR>
+
+             <TR height=20>
+          <TD align=middle width=30><IMG height=9 
+            src="{{ asset('images/admin/menu_icon.gif')}}" width=9></TD>
+          <TD><A class=menuChild 
+            href="{{ path('_admin_infoCheckinShop') }}"
+            target=main>编辑商店</A></TD></TR>
+
+             <TR height=20>
+          <TD align=middle width=30><IMG height=9 
+            src="{{ asset('images/admin/menu_icon.gif')}}" width=9></TD>
+          <TD><A class=menuChild 
+            href="{{ path('_admin_addCheckinPointTimes') }}"
+            target=main>设置积分倍数</A></TD></TR>
+
+            <TR height=20>
+          <TD align=middle width=30><IMG height=9 
+            src="{{ asset('images/admin/menu_icon.gif')}}" width=9></TD>
+          <TD><A class=menuChild 
+            href="{{ path('_admin_infoCheckinPointTimes') }}"
+            target=main>编辑积分倍数</A></TD></TR>
+
+              <TR height=4>
+          <TD colSpan=2></TD></TR>
+
+       </TABLE>
+
+
+       <TABLE cellSpacing=0 cellPadding=0 width=150 border=0>
+        <TR height=22>
+          <TD style="PADDING-LEFT: 30px" background="{{ asset('images/admin/menu_bt.jpg')}}"><A 
             class=menuParent onclick=expand(13) 
             href="javascript:void(0);">名片录力管理</A></TD></TR>
         <TR height=4>
