--- a/src/Jili/ApiBundle/Resources/views/User/adtaste.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/adtaste.html.twig
@@ -91,7 +91,11 @@ function addClass(type){
           </td>
           <td>{% if item.adid %}<a href="{{ path('_advertiserment_index',{'id':item.adid}) }}" target="_blank">{{ item.title }}</a>
               {% else%}
-              <a href="{{ path('_game_index') }}" target="_blank">{{ item.title }}</a>
+                  {% if item.incentiveType == 16 %}
+                    {{ item.title }}
+                  {% else %}
+                    <a href="{{ path('_game_index') }}" target="_blank">{{ item.title }}</a>
+                  {% endif %}
               {% endif %} 
           </td>
           <td>{% if item.incentiveType==2 %}
