--- a/web/css/index.css
+++ b/web/css/index.css
@@ -118,16 +118,16 @@
     width: 217px;
 }
 .index section.one #userInformation .after .user .photo{
-	float:left;
-	width:98px;
-	height:98px;
-	margin:0 10px 0 0;
-	padding:4px;
-	background:url(../images/user_head_bg.gif) no-repeat;
+	background: url("../images/user_head60_bg.gif") no-repeat scroll 0 0 rgba(0, 0, 0, 0);
+    float: left;
+    height: 64px;
+    margin: 0 10px 0 0;
+    padding: 3px;
+    width: 60px;
 }
 .index section.one #userInformation .after .user .photo img{
-	width:90px;
-	height:90px;
+	width:60px;
+	height:60px;
 }
 .index section.one #userInformation .after .user .photo:hover img{
 	opacity: .8;
@@ -139,12 +139,37 @@
 .index section.one #userInformation .after .user p.point{
 	font-size:18px;
 	color:#CCC;
-	position: absolute;
-	bottom: 95px;
 }
 .index section.one #userInformation .after .user p.point span{
 	color:#FF7114;
 	font-weight:bold;
+}
+.index section.one #userInformation .after .user a.signIn{
+	background-image: url("../images/signInBtn.jpg");
+    display: inline-block;
+    height: 45px;
+    margin-top: 20px;
+    width: 214px;
+	cursor:pointer;
+}
+.index section.one #userInformation .after .user a.signIn.close{
+	background-image:url(../images/signInClose.jpg);
+	cursor:default;
+}
+.index section.one #userInformation .after .user .signInExplain{
+	background-image: url("../images/signInExplain.gif");
+    height: 40px;
+    left: 25px;
+    line-height: 40px;
+    padding-top: 5px;
+    position: absolute;
+    text-align: center;
+    top: 150px;
+    width: 193px;
+    z-index: 9997;
+}
+.index section.one #userInformation .after .user .signInExplain span{
+	color:#ff7114;
 }
 .index section.one #userInformation .after .user p a.hello{
 	display: inline-block;
@@ -285,7 +310,97 @@
 	height:30px;
 	line-height: 30px;
 	border-bottom: 1px solid #ececec;
+	overflow: hidden;
 }
 .index section.main aside section li.last{
 	border-bottom: none;
+}
+#signInFrame{
+	background-image: url("../images/signInFrame.jpg");
+    height: 264px;
+    left: 0;
+    position: fixed;
+    top: 0;
+    width: 483px;
+	padding:20px 30px;
+	z-index: 9999;
+}
+#signInFrame h5{
+	font-weight:normal;
+	font-size:14px;
+}
+#signInFrame h5 span{
+	color:#e94c1b;
+}
+#signInFrame a.close{
+	background-image: url("../images/closeTag.gif");
+    display: inline-block;
+    font-size: 0;
+    height: 13px;
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    width: 14px;
+}
+#signInFrame ul{
+	margin-top:10px;
+}
+#signInFrame li{
+	float:left;
+	width:160px;
+	border-top:1px dotted #dcdcdc;
+	border-right:1px dotted #dcdcdc;
+	text-align:center;
+	padding:5px 0;
+	position:relative;
+}
+#signInFrame li.rbn{
+	border-right:none;
+}
+#signInFrame li.tbn{
+	border-top:none;
+}
+#signInFrame li img{
+	width:120px;
+	height:auto;
+}
+#signInFrame li p{
+	text-align:center;
+}
+#signInFrame li .gray{
+	background-color:#000;
+	opacity:.5;
+	position:absolute;
+	top:0;
+	left:0;
+	width:100%;
+	height:100%;
+	display:none;
+}
+#signInFrame li .goTo{
+	text-align:center;
+	color:#FFF;
+	position:absolute;
+	bottom:0;
+	left:0;
+	width:100%;
+	height:30px;
+	line-height:30px;
+	background-color:#5eb524;
+	display:none;
+}
+#signInFrame li .finish{
+	text-align:center;
+	color:#bcbdbd;
+	position:absolute;
+	bottom:0;
+	left:0;
+	width:100%;
+	height:30px;
+	line-height:30px;
+	background-color:#e0e2e2;
+	display:none;
+}
+#signInFrame li.finish .gray ,#signInFrame li.finish .finish{
+	display:block;
 }
