--- a/web/css/exchange.css
+++ b/web/css/exchange.css
@@ -39,6 +39,19 @@
     left: 186px;
     top: 590px;
 }
+.exchange .about a.close{
+	background-color: #999999;
+    background-position: 0 0;
+    border-radius: 5px;
+    color: #FFFFFF;
+    display: inline-block;
+    font-size: 16px;
+    height: 36px;
+    line-height: 36px;
+    position: absolute;
+    text-align: center;
+    width: 112px;
+}
 
 .exchange .about a.alipayBtn{
     right: 141px;
