--- a/src/Jili/ApiBundle/Resources/views/Default/index.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Default/index.html.twig
@@ -88,13 +88,12 @@ function goto(cid,aid,points){
                       if(data == 1){
                           var nowTimes = parseInt(parseInt($("#remain").text())-1);
                           if(nowTimes<=0){
-                              $("#signInFrame h5").text('签到成功,已获得,'+points+'米粒');
+                              $("#signInFrame h5").html("签到成功,已获得<font color='#E94C1B'>"+points+"</font>米粒");
                               $("#m_remain").text(nowTimes);
                           }else{
                               $("#remain").text(nowTimes);
                               $("#m_remain").text(nowTimes);
                           }
-                          
 
                       }
                       $(".image"+cid).removeAttr("onclick");
